Fixed old repo strings
A number of strings that refered the project by it's old name were
updated.

--- a/renovate.json5
+++ b/renovate.json5
@@ -3,6 +3,6 @@
   "platform": "github",
   "semanticCommits": true,
   "labels": ["renovate"],
-  "repositories": ["dc-tec/nixvim"],
+  "repositories": ["Steinhagen/nixvim"],
   "extends": ["config:recommended"],
 }
